--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "konva": "https://aistudiocdn.com/konva@^10.0.8",
     "react-konva": "https://aistudiocdn.com/react-konva@^19.2.0",
-    "konva/": "https://aistudiocdn.com/konva@^10.0.8/"
+    "konva/": "https://aistudiocdn.com/konva@^10.0.8/",
+    "firebase/app": "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js",
+    "firebase/database": "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js",
+    "firebase/": "https://aistudiocdn.com/firebase@^12.5.0/"
   }
 }
 </script>
