--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="shortcut icon" type="image/x-icon" href="favicon_2.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Collaborative Whiteboard</title>
     <script src="https://cdn.tailwindcss.com"></script>
